Make grades, start date, end date pickers.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,13 @@
     <string name="end_date">End date</string>
     <string name="alarm">Alarm</string>
 
+    <string-array name="grades">
+        <item>2: 0% / 100%</item>
+        <item>3: 0% / 50% / 100%</item>
+        <item>4: 0% / 33% / 66% / 100%</item>
+        <item>5: 0% / 25% / 50% / 75% / 100%</item>
+    </string-array>
+
     <string name="date_format">dd/MM/yyyy</string>
     <string name="sunday_initial">S</string>
     <string name="monday_initial">M</string>
@@ -22,6 +29,8 @@
     <string name="thursday_initial">T</string>
     <string name="friday_initial">F</string>
     <string name="saturday_initial">S</string>
+
+    <string name="no_choice">No choice</string>
 
     <string name="incomplete_field_error">There are incomplete required fields. Please complete them.</string>
     <string name="post_fail_error">Failed to send data.</string>
